fix: Correct script path in index.html
Updates the script tag in `index.html` to use a relative path `./main.js` instead of `main.js`. This ensures the script is loaded correctly when the application is deployed or served from a sub-directory.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
   <body>
     <div id="root"></div>
     <!-- Load main.js as a module, compiled by Babel -->
-    <script type="text/babel" data-type="module" src="main.js"></script>
+    <script type="text/babel" data-type="module" src="./main.js"></script>
   </body>
 </html>
