--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Load main.js as a module, compiled by Babel -->
-    <script type="text/babel" data-type="module" src="./main.js"></script>
+    <!-- Load script.js as a module, compiled by Babel -->
+    <script type="text/babel" data-type="module" src="./script.js"></script>
   </body>
 </html>
