feat: Update React CDN import map
Change the import map to explicitly load React from a CDN. This ensures consistent versioning and allows for potential performance benefits from CDN caching.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
     </style>
 
-    <!-- Import Map: Defines where to load modules from -->
+    <!-- Import Map: Defines where to load modules from CDN -->
     <script type="importmap">
 {
   "imports": {
